# planning-poker

./: .env.example  .gitignore  .voidrules  CLAUDE.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  RELEASE.md  RELEASE_SETUP.md  RELEASE_TEST.md  docker-compose.yml  k3d-cluster.sh  k3d-config.yaml
.github/workflows/: ci.yml  deploy.yml  release.yml
api/: .coveragerc  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
api/db/: redis_client.py
api/models/: room.py
api/routes/: rooms.py
api/services/: room_service.py
api/tests/: test_routes.py  test_service.py
design/: architecture.md
helm/planning-poker/: Chart.yaml  README.md  values-production.yaml  values.yaml
helm/planning-poker/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  cors-middleware.yaml  ingress.yaml  rate-limit-middleware.yaml  redis-deployment.yaml  redis-service.yaml  serviceaccount.yaml  ui-deployment.yaml  ui-service.yaml
ui/: .eslintrc.json  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  tsconfig.json
ui/public/: ai.txt  index.html  robots.txt
ui/src/: App.tsx  index.tsx
ui/src/components/: CreateRoom.tsx  JoinRoom.tsx  VotingRoom.tsx
ui/src/components/__tests__/: CreateRoom.test.tsx  JoinRoom.test.tsx  VotingRoom.test.tsx
ui/src/services/: api.ts
ui/src/services/__tests__/: api.test.ts
ui/src/types/: room.ts
